--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="game-container">
-        <button id="start-button">Iniciar Estudo</button>
+        <button id="start-button">Iniciar</button>
         <div id="flashcard-container" class="hidden">
             <div id="flashcard-1" class="flashcard">Resumo 1 aparecerá aqui</div>
             <div id="flashcard-2" class="flashcard">Resumo 2 aparecerá aqui</div>
